<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/russia_stadium"
    android:contentDescription="@string/reset"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/nigeria"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/Flag1"
        android:foregroundGravity="left"
        android:padding="16dp"
        android:src="@drawable/nigeria" />

    <ImageView

        android:id="@+id/argentina"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_toEndOf="@id/nigeria"
        android:layout_toRightOf="@id/nigeria"
        android:contentDescription="@string/Flag2"
        android:foregroundGravity="right"
        android:padding="16dp"
        android:src="@drawable/argentina" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/Nigeria"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/team_a_freekick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#f4f4f5"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_a_cornerkick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#f4f4f5"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForTeamNigeria"
                android:text="@string/ButtonScore"
                android:textColor="#f7fafa" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFreekickForTeamNigeria"
                android:text="@string/ButtonFreekick"
                android:textColor="#f7fafa" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addcornerkickForTeamNigeria"
                android:text="@string/ButtonCornerkick"
                android:textColor="#f7fafa" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/Argentina"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/team_b_freekick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#f4f4f5"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_b_cornerkick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#f4f4f5"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForTeamArgentina"
                android:text="@string/ButtonScore"
                android:textColor="#f7fafa" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFreekickForTeamArgentina"
                android:text="@string/ButtonFreekick"
                android:textColor="#f7fafa" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addcornerkickForTeamArgentina"
                android:text="@string/ButtonCornerkick"
                android:textColor="#f7fafa" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="resetAll"
        android:text="@string/reset"
        android:textColor="#f7fafa" />

</RelativeLayout>



